--- a/lib/lv_bugs_0_19_5_web/live/home/item_component.html.heex
+++ b/lib/lv_bugs_0_19_5_web/live/home/item_component.html.heex
@@ -21,12 +21,45 @@
         />
       </div>
 
-      <.button
-        type="button" phx-click="reset_colors" phx-target={@myself}
-        class="!p-[4px] !bg-white !border !border-black !text-black text-[12px] leading-[16px] items-center"
-      >
-        Reset colors
-      </.button>
+      <div class="flex-1 flex justify-between">
+        <.button
+          type="button" phx-click="reset_colors" phx-target={@myself}
+          class="!p-[4px] !bg-white !border !border-black !text-black text-[12px] leading-[16px] items-center"
+        >
+          Reset colors
+        </.button>
+
+        <div class="flex gap-[8px]">
+          <.button
+            :if={!@carousel}
+            type="button" phx-click="start_carousel" phx-target={@myself}
+            class="!p-[4px] !bg-white !border !border-black !text-black text-[12px] leading-[16px] items-center"
+          >
+            <span class="text-blue-500">
+              Start Carousel
+            </span>
+          </.button>
+
+          <.button
+            :if={@carousel}
+            type="button" phx-click="stop_carousel" phx-target={@myself}
+            class="!p-[4px] !bg-white !border !border-black !text-black text-[12px] leading-[16px] items-center"
+          >
+            <span class="text-red-500">
+              Stop Carousel
+            </span>
+          </.button>
+
+          <.select_letter id={"SelectLetter-#{@id}"} target={@myself} open?={@open_select_letter?}>
+            <.button
+              type="button" phx-click="open_select_letter" phx-target={@myself}
+              class="!p-[4px] !bg-white !border !border-black !text-black text-[12px] leading-[16px] items-center"
+            >
+              Open Popup
+            </.button>
+          </.select_letter>
+        </div>
+      </div>
     </div>
 
     <span class="self-end text-[12px]">
