update deps to take the nested lv component rest bug fix; fix item component logic to not create concurrent send_update_after loop

--- a/lib/lv_bugs_0_19_5_web/live/home/item_component.html.heex
+++ b/lib/lv_bugs_0_19_5_web/live/home/item_component.html.heex
@@ -31,7 +31,7 @@
 
         <div class="flex gap-[8px]">
           <.button
-            :if={!@carousel}
+            :if={!@carousel_state}
             type="button" phx-click="start_carousel" phx-target={@myself}
             class="!p-[4px] !bg-white !border !border-black !text-black text-[12px] leading-[16px] items-center"
           >
@@ -41,7 +41,7 @@
           </.button>
 
           <.button
-            :if={@carousel}
+            :if={@carousel_state}
             type="button" phx-click="stop_carousel" phx-target={@myself}
             class="!p-[4px] !bg-white !border !border-black !text-black text-[12px] leading-[16px] items-center"
           >
