add InitAlpine hook to item; fix LV at 0.20.1

--- a/lib/lv_bugs_0_19_5_web/live/home/item_component.html.heex
+++ b/lib/lv_bugs_0_19_5_web/live/home/item_component.html.heex
@@ -1,4 +1,4 @@
-<div id={@id} class="min-w-[200px] gap-[12px] flex items-start px-[24px]">
+<div id={@id} class="min-w-[200px] gap-[12px] flex items-start px-[24px]" phx-hook="InitAlpine">
   <.icon name="hero-photo" class="w-[64px] h-[64px]"/>
 
   <div
